--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </header>
 
       <section class="card-images" data-scroll>
-        <img src="https://picsum.photos/400/300?grayscale" alt="ảnh chính">
+        <img src="./image/ダウンロード.jpg" alt="ảnh chính">
         <img src="./image/z7183361059029_941a2b2106e810f27b67fc6431cb862c.jpg" alt="ảnh phụ">
       </section>
 
