--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       </header>
 
       <section class="card-images" data-scroll>
-        <img src="./image/anhchinh.jpg" alt="ảnh chính">
-        <img src="./image/anhphu.jpg" alt="ảnh phụ">
+        <img src="/image/anhchinh.jpg" alt="ảnh chính">
+        <img src="/image/anhphu.jpg" alt="ảnh phụ">
       </section>
 
       <section class="card-body" data-scroll>
