--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <title>Thiệp mời Lễ tốt nghiệp - Tông Hồng Trắng</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Dancing+Script&family=Monsieur+La+Doulaise&family=Roboto:wght@400;700&display=swap"
-    rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <div id="toast" class="toast">Cảm ơn bạn yêu💖</div>
@@ -35,18 +36,16 @@
         <h1 class="invite-title" data-scroll>Thư mời tham dự</h1>
         <h2 class="main-title" data-scroll>LỄ TỐT NGHIỆP</h2>
       </header>
+         <section class="card-body" data-scroll>
+        <p class="guest-name">Phi Tuyết</p>
+      </section>
 
       <section class="card-images" data-scroll>
         <img src="/images/anhchinh.jpg" alt="ảnh chính">
         <img src="/images/anhphu.jpg" alt="ảnh phụ">
       </section>
 
-      <section class="card-body" data-scroll>
-        <p class="text-blue">Thương mời tham dự</p>
-        <p class="text-highlight">Bạn yêu</p>
-        <p>THAM DỰ LỄ TỐT NGHIỆP</p>
-        <p class="guest-name">Trần Lâm Phi Tuyết</p>
-      </section>
+   
 
       <section class="card-info" data-scroll>
         <p>VÀO LÚC <span class="bold">16H THỨ 4</span></p>
@@ -61,7 +60,7 @@
       </section>
 
       <section class="card-buttons" data-scroll>
-        <button class="btn btn-primary">XÁC NHẬN THAM DỰ</button>
+        <button class="btn btn-primary">ĐỊA ĐIỂM CHỤP ẢNH</button>
         <button id="btn-directions" class="btn btn-outline">XEM CHỈ ĐƯỜNG</button>
       </section>
     </div>
