--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </section>
 
       <section class="card-images" data-scroll>
-        <img src="/images/anhphu.jpg" alt="ảnh chính">
-        <img src="/images/anhpt.jpg" alt="ảnh phụ">
+        <img src="/assets/anhphu.jpg" alt="ảnh chính">
+        <img src="/assets/anhpt.jpg" alt="ảnh phụ">
       </section>
       <section class="card-time" data-scroll>
         <div class="time-line">THÁNG 11</div>
@@ -76,7 +76,7 @@
   <div id="photoPopup" class="popup-overlay" style="display: none;">
     <div class="popup-content">
       <span id="closePhotoPopup" class="popup-close">&times;</span>
-      <img src="/images/address.jpg" alt="Điểm chụp hình" class="popup-image">
+      <img src="/assets/address.jpg" alt="Điểm chụp hình" class="popup-image">
     </div>
   </div>
 
