--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </section>
 
       <section class="card-images" data-scroll>
-        <img src="/public/anhchinh.jpg" alt="ảnh chính">
-        <img src="/public/anhpt.jpg" alt="ảnh phụ">
+        <!-- <img src="https://res.cloudinary.com/djtbi5avl/image/upload/v1763267777/anhphu_qcz6mu.jpg" alt="ảnh chính"> -->
+        <img src="https://res.cloudinary.com/djtbi5avl/image/upload/v1763267770/anhpt_vqk2jp.jpg" alt="ảnh phụ">
       </section>
       <section class="card-time" data-scroll>
         <div class="time-line">THÁNG 11</div>
@@ -76,7 +76,7 @@
   <div id="photoPopup" class="popup-overlay" style="display: none;">
     <div class="popup-content">
       <span id="closePhotoPopup" class="popup-close">&times;</span>
-      <img src="/public/address.jpg" alt="Điểm chụp hình" class="popup-image">
+      <img src="https://res.cloudinary.com/djtbi5avl/image/upload/v1763267844/address_htmj3h.jpg" alt="Điểm chụp hình" class="popup-image">
     </div>
   </div>
 
