--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
   </div> -->
 
   <!-- Mây bay nền -->
-  <div class="cloud cloud1"></div>
-  <div class="cloud cloud2"></div>
-  <div class="cloud cloud3"></div>
+
 
   <!-- Nội dung thiệp -->
   <div class="card-container fade-in-scale" data-scroll>
@@ -76,7 +74,8 @@
   <div id="photoPopup" class="popup-overlay" style="display: none;">
     <div class="popup-content">
       <span id="closePhotoPopup" class="popup-close">&times;</span>
-      <img src="https://res.cloudinary.com/djtbi5avl/image/upload/v1763267844/address_htmj3h.jpg" alt="Điểm chụp hình" class="popup-image">
+      <img src="https://res.cloudinary.com/djtbi5avl/image/upload/v1763267844/address_htmj3h.jpg" alt="Điểm chụp hình"
+        class="popup-image">
     </div>
   </div>
 
